# TaskBoard_Importer

./: .gitignore  CLOSURE_CHECKLIST.md  CONTRIBUTING.md  README.md  SMOKE_TEST_REPORT.md  analisi_funzionale_tecnica_taskboard_portfolio.md  databricks_setup_environment_roadmap_compatible.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INTEGRATION_TEST_REPORT_TEMPLATE.md  KNOWN_ISSUES.md  MIGRATION.md  QA_UAT_HANDOFF.md  architecture.md  decisions.md
docs/inputs/: analisi_funzionale_tecnica_taskboard_portfolio.docx  databricks_setup_environment_roadmap.md
docs/templates/standard/: README.md  backlog_notes.md  publish_rules.yml  roadmap.md
outputs/: sample_import.json  sample_manifest.json  smoke_final.json  smoke_import.json  smoke_manifest.json  smoke_manifest_final.json
outputs/qa-ready-001-session/: INTEGRATION_TEST_REPORT.md  project.yaml
projects/smoke-databricks-001/: project.yaml
src/taskboard_importer/: __init__.py  cli.py  dedupe.py  github_adapter.py  normalizer.py  parser_markdown.py  review_cli.py  run_import.py  schema.py  workspace.py
src/taskboard_importer/sync/: __init__.py  (+4 more)
tests/: test_application_import_roadmap.py  test_application_init_workspace.py  test_bootstrap_github.py  test_cli.py  test_dedupe.py  test_domain.py  test_github_adapter.py  test_infrastructure_workspace.py  test_mapping.py  test_parser.py  test_parsing.py  test_parsing_markdown.py  test_policies.py  test_policies_normalization.py  test_run_import.py  test_sync.py  test_sync_manifest.py  test_workspace.py
tests/fixtures/: databricks_setup_environment_roadmap.md
(+39 files in other folders)
