[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskboard-importer"
version = "0.1.0"
description = "Markdown roadmap to GitHub Tasks/Project importer"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Kirey Group" }
]
dependencies = [
  "requests>=2.31.0"
]

[project.scripts]
taskboard = "taskboard_importer.presentation.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
